--- a/login.html
+++ b/login.html
@@ -86,10 +86,10 @@
         .form-input {
             width: 100%;
             padding: 0.8rem 1rem 0.8rem 2.8rem;
-            background: rgba(2, 6, 23, 0.5);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.03);
+            border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            color: white;
+            color: var(--clr-text-main);
             font-family: var(--font-body);
             transition: all 0.3s ease;
         }
@@ -97,8 +97,8 @@
         .form-input:focus {
             outline: none;
             border-color: var(--clr-primary);
-            box-shadow: 0 0 15px rgba(6, 182, 212, 0.2);
-            background: rgba(2, 6, 23, 0.8);
+            box-shadow: 0 0 15px rgba(64, 149, 92, 0.1);
+            background: rgba(0, 0, 0, 0.01);
         }
 
         .input-icon {
