Add new discover information sections (Publications, Events, History)

--- a/index.html
+++ b/index.html
@@ -157,6 +157,57 @@
                 </div>
             </div>
         </section>
+
+        <!-- Discover ISRS Section -->
+        <section id="discover" class="section info-grid-section">
+            <div class="container fade-in-up">
+                <div class="section-header">
+                    <h2 class="section-title">Discover ISRS</h2>
+                    <p class="section-subtitle">Information & Resources</p>
+                </div>
+                <div class="info-grid">
+                    <!-- Contact Us / Publications -->
+                    <div class="info-card">
+                        <div class="card-icon"><i class="fa-solid fa-book-open"></i></div>
+                        <h3>Contact Us & Publications</h3>
+                        <p>Links to ISRS's publications, including journals, books, textbooks, video, and news.</p>
+                        <a href="#" class="card-link">Get in Touch <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+
+                    <!-- Subscribe Today -->
+                    <div class="info-card">
+                        <div class="card-icon"><i class="fa-solid fa-envelope-open-text"></i></div>
+                        <h3>Subscribe Today</h3>
+                        <p>Get Updates On Processes That Control The Response Of Materials. Contact Us.</p>
+                        <a href="#" class="card-link">Subscribe <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+
+                    <!-- Meetings & Events -->
+                    <div class="info-card">
+                        <div class="card-icon"><i class="fa-solid fa-calendar-days"></i></div>
+                        <h3>Meetings & Events</h3>
+                        <p>Check Our Upcoming Events. View Details.</p>
+                        <a href="#" class="card-link">View Events <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+
+                    <!-- Publications & News -->
+                    <div class="info-card">
+                        <div class="card-icon"><i class="fa-solid fa-newspaper"></i></div>
+                        <h3>Publications & News</h3>
+                        <p>Check Our Featured Journals. Get Valuable Insights.</p>
+                        <a href="#" class="card-link">Read News <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+
+                    <!-- ISRS History -->
+                    <div class="info-card">
+                        <div class="card-icon"><i class="fa-solid fa-landmark"></i></div>
+                        <h3>ISRS History</h3>
+                        <p>Innovative Science Research Society Was Founded In 2013. Know More.</p>
+                        <a href="#" class="card-link">Our History <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
