Add Membership section with subpages (Membership, Volunteer Central, Governance)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                 <a href="#about">About</a>
                 <a href="#symposia">Symposia</a>
                 <a href="#submission">Call for Papers</a>
+                <div class="nav-dropdown">
+                    <a href="membership.html">Membership <i class="fa-solid fa-chevron-down"
+                            style="font-size: 0.8em; margin-left: 2px;"></i></a>
+                    <div class="dropdown-content">
+                        <a href="membership.html">ISRS Membership</a>
+                        <a href="volunteer.html">Volunteer Central</a>
+                        <a href="governance.html">Governance</a>
+                    </div>
+                </div>
                 <a href="login.html" class="btn-login"
                     style="display:inline-flex;align-items:center;gap:0.5rem;text-decoration:none;"><i
                         class="fa-solid fa-user"></i> Login</a>
